# Microcurrency

./: .cirrus.yml  .gitignore  COPYING  Makefile.am  README.md  configure.ac  libmicrocurrencyconsensus.pc.in
contrib/: README.md  bitcoin-cli.bash-completion  bitcoin-tx.bash-completion  bitcoind.bash-completion  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  microcurrency-conf.md  multiprocess.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  (+5 more)
doc/man/: Makefile.am  bitcoin-qt.1  bitcoin-util.1  bitcoin-wallet.1  bitcoind.1  microcurrency-cli.1  microcurrency-tx.1
share/: cross-compile.sh  genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  bitcoin-cli.cpp  bitcoin-tx.cpp  (+100 more)
(+906 files in other folders)
