dist_man1_MANS=

if BUILD_MICROCURRENCYD
  dist_man1_MANS+=microcurrencyd.1
endif

if ENABLE_QT
  dist_man1_MANS+=microcurrency-qt.1
endif

if BUILD_MICROCURRENCY_CLI
  dist_man1_MANS+=microcurrency-cli.1
endif

if BUILD_MICROCURRENCY_TX
  dist_man1_MANS+=microcurrency-tx.1
endif

if BUILD_MICROCURRENCY_UTIL
  dist_man1_MANS+=microcurrency-util.1
endif

if ENABLE_WALLET
if BUILD_MICROCURRENCY_WALLET
  dist_man1_MANS+=microcurrency-wallet.1
endif
endif
